# JSON-Resume

./: .env-sample  .gitignore  .pdm-python  LOG.org  README.org  package-lock.json  package.json  pyproject.toml  resume.html  sqitch-cmds.txt  sqitch.conf
pg/: sqitch.plan
pg/deploy/: app_schema.sql  dt_education.sql  dt_person.sql
pg/revert/: app_schema.sql  dt_education.sql  dt_person.sql
pg/verify/: app_schema.sql  dt_education.sql  dt_person.sql
ref/: Accomplishments2017.rst  Accomplishments2019.rst  CV2020.rst  CV2021-proton.rst  CV2023-servarica.html  CV2023-servarica.rst  ShortResume2019.rst  resume-sample.json  resume-sample.toml  resume-sample.toml.json  resume-sample.yaml
ref/rayaanahmedmemon/: resume.json
src/json_resume/: all_components-1.json  all_components.json  all_components.toml  all_components.yaml  build_json.py  build_resume.py  build_toml.py  build_yaml.py  json2toml.py  json2yaml.py  resume-stackoverflow.html  resume-stackoverflow.json  resume.yaml  toml2json.py  yaml2json.py  yaml2toml.py
src/json_resume/components/json/: awards.json  basics.json  education.json  interests.json  languages.json  meta.json  projects.json  publications.json  references.json  skills.json  volunteer.json  work.json
src/json_resume/components/toml/: awards.toml  basics.toml  education.toml  interests.toml  languages.toml  meta.toml  projects.toml  publications.toml  references.toml  skills.toml  volunteer.toml  (+1 more)
src/json_resume/models/: __init__.py  __main__.py
templates/deploy/: pg.tmpl
templates/revert/: pg.tmpl
templates/verify/: pg.tmpl
(+27 files in other folders)
