[project]
name = "JSON-Resume"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Patrick Allan", email = "patrick29501@gmx.com"},
]
dependencies = ["jsons>=1.6.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
